fix email form spacing between textarea and button

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -14,7 +14,6 @@ body {
   margin: 0 auto;
   margin-top: 56px;
   display: grid;
-  /* margin so that the fixed nav works */
   grid-template-columns: 1fr;
   width: 66.6%;
   transition: 0.3s;
@@ -52,8 +51,7 @@ header {
   padding: 0;
   background-color: #1F460F;
   overflow: hidden;
-  /* keeps the fixed navbar layered "on top" of the rest of the page */
-  z-index: 5 !important;
+  z-index: 5 !important; /* keeps the fixed navbar layered "on top" of the rest of the page */
 }
 
 nav {
@@ -173,7 +171,6 @@ blockquote p {
   color: #F0F1F5;
   transition: 1s;
   margin: auto;
-  /* font-size: 1.5em; */
 }
 
 .project-item-description p {
@@ -221,13 +218,12 @@ form {
 #email-textarea {
   resize: none;
   line-height: 1.2em;
-  border-bottom: 0.15rem solid rgba(0, 0, 0, 0.65);
+  /* border-bottom: 0.15rem solid rgba(0, 0, 0, 0.65); */
+  vertical-align: top;  /* fixes weird gap space between textarea and submit button */
 }
 
 #submit-button {
   margin: 0;
-  margin-top: -0.15rem;
-  border: 0.15rem solid #1F460F;
   padding: 0;
   font-family: "Calibri", sans-serif;
   background-color: #1F460F;
@@ -244,7 +240,6 @@ form {
 }
 
 .contact-link {
-  /* font-size: 1.1em; */
   margin-left: 0.2em;
   line-height: 1.1em;
 }
